codeset home page align issue fixed

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -19,7 +19,7 @@ body{
 }
 .selected_events {
   overflow: auto;
-  height: 430px; 
+  height: 430px;
 }
 .footer {
   width:100%;
@@ -1246,9 +1246,10 @@ text-align: left;
 .upload-btn-wrapper {
   position: relative;
   overflow: hidden;
-  display: inline;
 }
-
+.w30R{
+width:30rem !important;
+}
 .btn {
   color: gray;
   background-color: white;
